2014-09-22  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/62219
	* pt.c (check_default_tmpl_args): Check LAMBDA_FUNCTION_P.

2014-09-22  Jason Merrill  <jason@redhat.com>

	* decl.c (poplevel): Don't warn about unused vars in template scope.
	* error.c (dump_decl): Handle variable templates.

2014-09-20  Jason Merrill  <jason@redhat.com>

	PR c++/62017
	* decl.c (begin_destructor_body): Only clobber the as-base part of
	*this.

2014-09-19  Jason Merrill  <jason@redhat.com>

	PR c++/61392
	* mangle.c (write_expression): Use unresolved-name mangling for
	DR850 case.

	PR c++/61465
	* call.c (convert_like_real) [ck_identity]: Call mark_rvalue_use
	after pulling out an element from a CONSTRUCTOR.

2014-09-18  Jakub Jelinek  <jakub@redhat.com>

	PR c++/63248
	* semantics.c (finish_omp_clauses): Don't call cp_omp_mappable_type
	on type of type dependent expressions, and don't call it if
	handle_omp_array_sections has kept TREE_LIST because something
	was type dependent.
	* pt.c (tsubst_expr) <case OMP_TARGET, case OMP_TARGET_DATA>:
	Use keep_next_level, begin_omp_structured_block and
	finish_omp_structured_block instead of push_stmt_list and
	pop_stmt_list.

2014-09-18  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/62232
	* class.c (finish_struct_1): Do not -Wnon-virtual-dtor warn
	for final class types.

2014-09-15  Jason Merrill  <jason@redhat.com>

	* pt.c (lookup_template_class_1): Splice out abi_tag attribute if
	necessary.  Call inherit_targ_abi_tags here.
	* class.c (check_bases_and_members): Not here.
	(inherit_targ_abi_tags): Check CLASS_TYPE_P.
	* cp-tree.h: Declare inherit_targ_abi_tags.

2014-09-15  Ville Voutilainen  <ville.voutilainen@gmail.com>

	Do not diagnose lambda default arguments in c++14 modes.
	* parser.c (cp_parser_lambda_declarator_opt): Make the pedwarn
	conditional.

2014-09-15  Jakub Jelinek  <jakub@redhat.com>

	* Make-lang.in (check_g++_parallelize): Change to just an upper bound
	number.
